@@ -1,13 +1,17 @@
 function GridView_ClientEvent (ctrlId, evnt)
 {
-	var gridData = eval (ctrlId + "_data");
+	var gridData = getGrid (ctrlId);
+	if (!gridData)
+	    return null;
 	var clientData = gridData.pageIndex + '|' + escape (gridData.sortExp) + '|' + gridData.sortDir + '|' + evnt;
 	WebForm_DoCallback (gridData.uid, clientData, GridView_ClientRender, ctrlId, GridView_ClientRender_Error);
 }
 
 function GridView_ClientRender (data, ctx)
 {
-	var gridData = eval (ctx + "_data");
+	var gridData = getGrid (ctx);
+	if (!gridData)
+	    return;
 	var grid = document.getElementById (ctx + "_div");
 	var i = data.indexOf ("|");
 	var j = data.indexOf ("|", i+1);
@@ -28,3 +32,6 @@ function GridView_ClientRender (data, ctx)
 function GridView_ClientRender_Error (data, ctx)
 {
 }
+
+function getGrid (gridId) { try { return eval (gridId + "_data"); } catch(e) { return null; } }
+
