@@ -1,3 +1,8 @@
+2007-01-21  Konstantin Triger <kostat@mainsoft.com>
+
+	* Page.cs: move the WriteClientScriptIncludes to the top of the form,
+		according to the MSDN.
+
 2007-01-16  Vladimir Krasnov  <vladimirk@mainsoft.com>
 
 	* TemplateControl.jvm.cs: remover TemplateSourceDirectory propery
